--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ owner:
   linkedin: https://www.linkedin.com/in/sam-weisenthal-6518747a/
   github: samuelweisenthal
   orcid: 0000-0001-7921-1836
-  researchgate: NA 
-  mendeley: NA 
+  researchgate: # 
+  mendeley: # 
   google:
     plus: #username
     analytics:
