--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,14 +2,14 @@
 - title: Home
   url: /
 
-- title: Contact
-  url: /contact/
+#- title: Contact
+#  url: /contact/
 
 # - title: Presentations
 #   url: /presentations/
 
-- title: Resume
-  url: /resume/
+#- title: Resume
+#  url: /resume/
 
-- title: Research
-  url: /research/
+#- title: Research
+#  url: /research/
