--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ owner:
   orcid: 0000-0001-7921-1836
   researchgate: 
   mendeley: 
+  BinaxnowPostTestProb:https://github.com/samuelweisenthal/binax.now.post.test.prob/blob/main/covid.post.test.pdf 
   google:
     plus: #username
     analytics:
