--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   avatar: #bio-photo.jpg
   bio: Graduate Student at University of Rochester, Statistics 
   email: samweisenthal@gmail.com
-  twitter: 
+  twitter: @samweisenthal
   linkedin: https://www.linkedin.com/in/sam-weisenthal-6518747a/
   github: samuelweisenthal
   orcid: 0000-0001-7921-1836
