--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ logo: # logo.png # filename of a logo image that has been placed into your image
 owner:
   name: Sam Weisenthal
   avatar: #bio-photo.jpg
-  bio: S
+  bio: 
   email: samweisenthal@gmail.com
   twitter: samweisenthal
   linkedin: https://www.linkedin.com/in/sam-weisenthal-6518747a/
