--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   bio:
   email: samweisenthal@gmail.com
   twitter: samweisenthal
-  linkedin: https://www.linkedin.com/in/sam-weisenthal-6518747a/
+  linkedin: sam-weisenthal-6518747a
   github: samuelweisenthal
   orcid: 0000-0001-7921-1836
   researchgate: 
