--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Site wide configuration
 
-title: Sam Weisenthal
+title: 
 locale: en_US
 logo: # logo.png # filename of a logo image that has been placed into your images directory
 
