--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # logo.png # filename of a logo image that has been placed into your image
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Sam Weisenthal
-  avatar: #bio-photo.jpg
+  avatar: headshot.jpg
   bio: Interested in the probabilistic/statistical foundations of medical decision making. 
   email: samweisenthal@gmail.com
   twitter: samweisenthal
