--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ logo: # logo.png # filename of a logo image that has been placed into your image
 owner:
   name: Sam Weisenthal
   avatar: headshot.jpg
-  bio: Interested in the probabilistic/statistical foundations of medical decision making. 
+  bio: 
   email: samweisenthal@gmail.com
   twitter: samweisenthal
   linkedin: sam-weisenthal-6518747a
