--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   bio: 
   email: samweisenthal@gmail.com
   twitter: samweisenthal
-  linkedin: sam-weisenthal-6518747a
+  linkedin: samuel-weisenthal-6518747a
   github: samuelweisenthal
   orcid: 0000-0001-7921-1836
   researchgate: 
@@ -25,7 +25,7 @@ owner:
   facebook: #username
   instagram: #username
   bing-verify:
-  stackoverflow: #2795733/sam-weisenthal #users/2795733/sam-weisenthal 123456/username from a "https://stackoverflow.com/users/123456/username" link
+  stackoverflow: #54664/samuel-weisenthal #users/2795733/sam-weisenthal 123456/username from a "https://stackoverflow.com/users/123456/username" link
   xing: #username
   lastfm: #username
   tumblr: #username
