--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ owner:
     plus: #username
     analytics:
     verify:
-    scholar: bbcNyWwAAAAJ&amp;hl=ch 
+    scholar: bbcNyWwAAAAJ&hl=en
   facebook: #username
   instagram: #username
   bing-verify:
