--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ owner:
   foursquare: #username
   steam: #username
   dribbble: #username
-  youtube: @samweisenthal
+  youtube: samweisenthal
   soundcloud: #username
   weibo: #username
   flickr: #username
